# tinyGPT

./: .gitignore  README.md  clear_cache.py  extract_data.py  main.py  pyproject.toml  requirements.txt  tinygpt.pth  tinygpt.py
.github/workflows/: ci.yml
tests/: test_extract_data.py  test_tinygpt.py
training_data/: nist_ai_rmf_playbook.html  python_tutorial_classes.html  python_tutorial_controlflow.html  python_tutorial_introduction.html  pytorch_60min_blitz.html  the_federalist_papers.txt  wikipedia_artificial_intelligence.html  wikipedia_machine_learning.html
