[project]
name = "tinygpt"
version = "0.1.0"
description = "A minimal character-level Transformer language model"
readme = "README.md"
authors = [{ name = "-XO-OX-", email = "greshamd27@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pypdf>=3.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
